--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <main aria-live="polite">
         <h1>Comming Soon</h1>
-        <figure>
+
+
+		<div class="hey">
+
+		
+
             <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 28.2.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -73,9 +78,9 @@
 		h15.77v4.44h-15.77v11.69h17.51v4.65H432.5v-36.91h22.51V596.81z"/>
 </g>
 </svg>
-
-            <figcaption>This site is under construction. Please check back soon!</figcaption>
-        </figure>
+</div>
+     
+		<p>This site is under construction. Please check back soon!</p>
     </main>
 </body>
 </html>
