--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main aria-live="polite">
-        <h1>Comming Soon</h1>
+        <h1>Coming Soon</h1>
 
 
 		<div class="hey">
