--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
 			<div class=" col-sm-6   m-6 d-flex justify-content-center    align-items-cente ">
 				<div class="w-100 m-auto">
 
-			
-				<p>Sign up to keep informed about all the latest offerings and free events from Room To Breathe.</p>
+					<p>Website currently under construction.</p>
+					<p><b>Please enter details here to register for free online breathwork sessions and weekly newsletter.</b></p>
+					<p>Breathwork session - Zoom login details will be emailed to you 10 minutes prior to start of session.</p>
+					<p>Newsletter - emailed every Monday evening.</p>
+					<p>Thank you, <br> Michael</p>
+					
+
 		
 				<div class="form-cont ">
 					<div id="mc_embed_shell">
